Changelog (English)
===================

1.29.2-38
Updated to busybox v1.29.2 (static)
Translated into Ukrainian

1.28.4-37
Updated to busybox v1.28.4 (static)

1.28.3-36
Updated to busybox v1.28.3 (static)

1.27.2-35
Includes busybox v1.27.2 (static)
Added ssl_helper for SSL support

1.27.1-33
Includes busybox v1.27.1 (static)

1.26.2-29
Includes busybox v1.26.2 (static)

1.25.1-28
Includes busybox v1.25.1 (static)
Translated into traditional Chinese and German

1.24.2-25
Added patch for tar with option --hard-dereference
Translated into Korean

1.24.2-24
Includes busybox v1.24.2
Added removing old busybox for installation via recovery
Translated into Spanish

1.24.1-23
Dynamically build by default
Remove terminal feature

1.24.1-21
Open a shell from Android Terminal Emulator
Translated into Chinese
Added support static build

1.24.1-18
Includes busybox v1.24.1
Translated into French

1.23.2-17
Added request for permission to write (for Android 6)
Fixed missing siglongjmp and sigsetjmp symbols on x86 architecture

1.23.2-15
Added applets cryptpw and mkpasswd
Added support devpts
Enabled line editing (mainly for shell command line)

1.23.2-13
Added the ability to use busybox tools without superuser privileges (root)
Fixed problem with remount the block device as read-write
Fixed problem with mounting loop devices
Added feature of creating a zip-archive for installation via recovery


История изменений (Русский)
===========================

1.29.2-38
Обновлено до busybox v1.29.2 (статическая сборка)
Переведено на украинский язык

1.28.4-37
Обновлено до busybox v1.28.4 (статическая сборка)

1.28.3-36
Обновлено до busybox v1.28.3 (статическая сборка)

1.27.2-35
Включает сборку busybox v1.27.2 (статическая сборка)
Добавлен ssl_helper для поддержки SSL

1.27.1-33
Включает сборку busybox v1.27.1 (статическая сборка)

1.26.2-29
Включает сборку busybox v1.26.2 (статическая сборка)

1.25.1-28
Включает сборку busybox v1.25.1 (статическая сборка)